--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,14 @@
   width: 100%;
   height: 50px;
 }
-/* <!-- Cor Pagina -->*/
-
-.cor-pg{ 
-	margin: 0; 
-	padding: 0; 
-	min-width: 100%; 
-	width: 100% !important; 
-	height: 100% !important;
-	background: #ff8c00;
+.cor-pg{
+  margin: 0; 
+  padding: 0; 
+  min-width: 100%; 
+  width: 100% !important; 
+  height: 100% !important;
+  background: #ff6004;
 }
-/*dark background to support form theme*/
 .corpo{
 	margin-left: 35%;
     margin-top: 15px;
